fixed featured story alignment bug at desktop-header breakpoint

--- a/mysite/assets/scss/base/layout/_containers.scss
+++ b/mysite/assets/scss/base/layout/_containers.scss
@@ -117,6 +117,10 @@
 			padding-left: 0px;
 			padding-right: 0px;
 
+			&:first-child {
+				padding-top: 10px;
+			}
+
 			@include breakpoint(large) {
 				padding: 10px;
 
@@ -135,6 +139,10 @@
 		& > .columns {
 			padding-left: 0px;
 			padding-right: 0px;
+
+			&:first-child {
+				padding-top: 10px;
+			}
 
 			@include breakpoint(large) {
 				padding: 10px;
